--- a/music/src/app/music.html
+++ b/music/src/app/music.html
@@ -1,3 +1,63 @@
-<p>
-  music Works!
-</p>
+<div id="main-nav">
+  <a id="logo" class="logo"></a>
+  <ul id="nav-items">
+    <li><a class="spoticon-search-32 standard-menu-item"><span>Search</span></a></li>
+    <li><a class="spoticon-browse-32 standard-menu-item"><span>Browse</span></a></li>
+    <li><a class="spoticon-radio-32 standard-menu-item"><span>Radio</span></a></li>
+    <li><a class="spoticon-collection-32 standard-menu-item"><span>Your Music</span></a></li>
+    <li><a class="spoticon-follow-32 standard-menu-item"><span>Follow</span></a></li>
+  </ul>
+</div>
+<div id="wrapper">
+  <div id="main">
+    <div id="header" class="container-fluid">
+      <h1 class="main-header">Browse</h1>
+      <div class="local-nav" id="nav">
+        <div class="navbar-fixed-wrapper">
+          <div class="navbar">
+            <ul class="nav" data-log-context="nav-bar">
+              <li class="active"><a data-log-click="nav-home">Overview</a></li>
+              <li><a data-log-click="nav-charts">Charts</a></li>
+              <li><a data-log-click="nav-genres">Genres &amp; Moods</a></li>
+              <li><a data-log-click="nav-releases">New Releases</a></li>
+              <li><a data-log-click="nav-discover">Discover</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="section-divider genres-section">
+        <div id="featuredPlaylistLabel">
+          Albums
+        </div>
+      </div>
+      <div id="genresAndMoods">
+        <div class="row fivecolumns">
+          <div>
+            <div class="col-sm-3 col-md-3 col-lg-2 media default image-grid genre">
+              <a>
+                <div class="genreImage" style="background-image: url('/images/ramones-ramones.jpg');">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div>
+            <div class="col-sm-3 col-md-3 col-lg-2 media default image-grid genre">
+              <a>
+                <div class="genreImage" style="background-image: url('/images/ramones-leave-home.jpg');">
+                </div>
+              </a>
+            </div>
+          </div>
+          <div>
+            <div class="col-sm-3 col-md-3 col-lg-2 media default image-grid genre">
+              <a>
+                <div class="genreImage" style="background-image: url('/images/ramones-rocket-to-russia.jpg');">
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
