--- a/music/src/app/music.html
+++ b/music/src/app/music.html
@@ -32,13 +32,7 @@
       </div>
       <div id="genresAndMoods">
         <div class="row fivecolumns">
-          <div *ng-for="#album of albums">
-            <div class="col-sm-3 col-md-3 col-lg-2 media default image-grid genre">
-              <a>
-                <div class="genreImage" [style.background-image]="'url('+album.image+')'"></div>
-              </a>
-            </div>
-          </div>
+          <album-cover *ng-for="#album of albums" [album]="album"></album-cover>
         </div>
       </div>
     </div>
