--- a/music/src/app/music.html
+++ b/music/src/app/music.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <albums-page></albums-page>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
